Feat: z index 50 added

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
     
     <!-- FEEDBACK FAB -->
-    <button id="feedback-fab" class="feedback-fab fixed bottom-24 right-4 md:bottom-8 md:right-8 bg-teal-600 text-white p-4 rounded-full shadow-lg">
+    <button id="feedback-fab" class="feedback-fab fixed bottom-24 right-4 md:bottom-8 md:right-8 bg-teal-600 text-white p-4 rounded-full shadow-lg z-50">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
     </button>
     
